--- a/en/index.html
+++ b/en/index.html
@@ -83,17 +83,17 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Sweet afternoon | S/20</p>
-        <p class="u-pull-right">Saké and mochi to share</p>
+        <p class="u-pull-left">Sake and sushi | S/20</p>
+        <p class="u-pull-right">Saké and 12 pieces sushi to share</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Wine by the bottle | S/60</p>
+        <p class="u-pull-left">Wine by the bottle | S/50</p>
         <p class="u-pull-right">White, red or sparkling</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">cebiche and beer | S/15</p>
+        <p class="u-pull-left">ceviche and beer | S/17</p>
         <p class="u-pull-right">highland cebiche paired with a cold Pilsen</p>
       </div>
     </div>
