--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Sweet afternoon | S/22</p>
-        <p class="u-pull-right">Saké and maki dulce para compartir</p>
+        <p class="u-pull-left">Saki and sushi | S/27</p>
+        <p class="u-pull-right">Saké and sushi para compartir</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Vino por la botella | S/60</p>
+        <p class="u-pull-left">Vino por la botella | S/50</p>
         <p class="u-pull-right">Blanco, tinto o espumante</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">el ceviche con su chela | S/15</p>
+        <p class="u-pull-left">el ceviche con su chela | S/17</p>
         <p class="u-pull-right">cebiche vegano y una Pilsen bien fria</p>
       </div>
     </div>
