--- a/en/index.html
+++ b/en/index.html
@@ -88,12 +88,12 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Wine by the bottle | S/50</p>
+        <p class="u-pull-left">Wine by the bottle | S/60</p>
         <p class="u-pull-right">White, red or sparkling</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">ceviche and beer | S/17</p>
+        <p class="u-pull-left">ceviche and beer | S/15</p>
         <p class="u-pull-right">highland cebiche paired with a cold Pilsen</p>
       </div>
     </div>
@@ -163,12 +163,6 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Hiring   </p>
-        <p class="u-pull-right"> 
-								<br><br> itamae, chef </p>
-      </div>
-  <!-- -->
-      <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Alan </p>
         <p class="u-pull-right">conceptualizer, architect, dishwasher
 								<br><br>... fui lavaplatos en restaurantes, <br>tome curso en ingles, <br>now I'm a dishwasher!</p>
@@ -178,6 +172,12 @@
         <p class="u-pull-left">Jerenie <br></p>
         <p class="u-pull-right"><br>personnel picker extraordinaire  
 								<br><br>  </p>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Hiring   </p>
+        <p class="u-pull-right"> 
+								<br><br> itamae, chef </p>
       </div>
     </div>
 
@@ -191,13 +191,13 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Oswaldo </p>
+        <p class="u-pull-left">Mayyer </p>
         <p class="u-pull-right">  
 								<br><br> kitchen </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Jennifer  </p>
+        <p class="u-pull-left">Antoni  </p>
         <p class="u-pull-right">  
 								<br><br> kitchen </p>
       </div>
@@ -207,19 +207,19 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Luis  </p>
+        <p class="u-pull-left">Ada  </p>
         <p class="u-pull-right"> 
 								<br><br> kitchen </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Irwin </p>
+        <p class="u-pull-left">Jhon </p>
         <p class="u-pull-right">  
 								<br><br> kitchen </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Antoni  </p>
+        <p class="u-pull-left">Angel  </p>
         <p class="u-pull-right">  
 								<br><br> kitchen </p>
       </div>
