--- a/es/index.html
+++ b/es/index.html
@@ -38,12 +38,12 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="one-half column" style="margin-top: 15%">
-        <h5>Sorprender y deleitar los sentidos</h5>
+      <div class="one-half column" style="margin-top: 10%">
+        <h5>sorprender y deleitar los sentidos</h5>
 
 
         <p>Presentando sushi vegano por Master Chef Perú Jim Daniel Echevarría. Disfrutado por veganos, vegetarianos, pescetarianos, flexitarianos y carnívoros igual. No encontrarás nada igual.</p>
-         <p class="u-pull-left" >abierto todos los días<br>&nbsp;&nbsp;&nbsp;12 P.M. a 9 P.M.<br>no reservations<br>solo efectivo<br><br>  
+         <p class="u-pull-left" >abierto todos los días<br>&nbsp;&nbsp;&nbsp;12 P.M. a 9 P.M.<br>no reservaciones<br>solo efectivo<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">opiniones desde tripadvisor</a>
 		 </p>
       	<p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Perú<br><br><br><br>
@@ -54,9 +54,9 @@
 
   <!-- sample dishes row -->
     <div class="row">
-      <div class="six columns" style="margin-top: 25%">
+      <div class="six columns" style="margin-top: 10%">
         <h5>combos y tablas</h5>
-        <p class="u-pull-right">precios en Soles<br>La carta 100% vegana<a target="_blank" href="images/menu-1.jpg">esta aqui</a>.</p>
+        <p class="u-pull-right">precios en Soles<br>La carta 100% vegana <a target="_blank" href="images/carta-1.jpg"> esta aqui</a>.</p>
       </div>
     </div>
 
@@ -83,17 +83,17 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Sak y sushi | S/27</p>
+        <p class="u-pull-left">Saki and sushi | S/27</p>
         <p class="u-pull-right">Saké and sushi para compartir</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Wine por botella | S/50</p>
+        <p class="u-pull-left">Vino por la botella | S/60</p>
         <p class="u-pull-right">Blanco, tinto o espumante</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">el ceviche con su chela | S/17</p>
+        <p class="u-pull-left">el ceviche con su chela | S/15</p>
         <p class="u-pull-right">cebiche vegano y una Pilsen bien fria</p>
       </div>
     </div>
@@ -102,7 +102,7 @@
   <!-- Mentions header row -->
     <div class="row">
       <div class="six columns" style="margin-top: 5%">
-        <h4>Fama</h4>
+        <h4>la fama</h4>
       </div>
     </div>
 
@@ -125,7 +125,7 @@
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Oasis vegano en Arequipa</p>
         <a target="_blank" class="button" style="float: right" 
-			href="http://theveganglobetrotter.com/es/vegan-oasis-arequipa-el-buda-profano/">The Vegan Globetrotter</a>
+			href="http://theveganglobetrotter.com/un-oasis-vegano-en-arequipa-el-buda-profano/">The Vegan Globetrotter</a>
       </div>
     </div>
 
@@ -155,7 +155,7 @@
     <div class="row">
       <div class="six columns" style="margin-top: 5%">
         <h4>el equipo</h4>
-		<a class="button" style="float: right" href="mailto:buda.profano@gmail.com">Join us!</a>
+		<a class="button" style="float: right" href="mailto:buda.profano@gmail.com">¡Únete!</a>
       </div>
     </div>
 
@@ -163,21 +163,20 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Hiring   </p>
-        <p class="u-pull-right"> 
-								<br><br> itamae, chef </p>
-      </div>
-  <!-- -->
-      <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Alan </p>
-        <p class="u-pull-right">conceptualizer, architect, dishwasher
+        <p class="u-pull-right">conceptualizador, arquitecto
 								<br><br>... fui lavaplatos en restaurantes, <br>tome curso en ingles, <br>now I'm a dishwasher!</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Jerenie <br></p>
-        <p class="u-pull-right"><br>personnel picker extraordinaire  
+        <p class="u-pull-right"><br>RR.HH.  
 								<br><br>  </p>
+      </div>  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">abierta   </p>
+        <p class="u-pull-right"> 
+								<br><br> itamae, chef </p>
       </div>
     </div>
 
@@ -191,13 +190,13 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Oswaldo </p>
+        <p class="u-pull-left">Mayyer </p>
         <p class="u-pull-right">  
 								<br><br> cocina </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Jennifer  </p>
+        <p class="u-pull-left">Antoni  </p>
         <p class="u-pull-right">  
 								<br><br> cocina </p>
       </div>
@@ -207,19 +206,19 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Luis  </p>
+        <p class="u-pull-left">Ada  </p>
         <p class="u-pull-right"> 
 								<br><br> cocina </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Irwin </p>
+        <p class="u-pull-left">Jhon </p>
         <p class="u-pull-right">  
 								<br><br> cocina </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Antoni  </p>
+        <p class="u-pull-left">Angel  </p>
         <p class="u-pull-right">  
 								<br><br> cocina </p>
       </div>
