--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Vino por la botella | S/50</p>
+        <p class="u-pull-left">Vino por la botella | S/60</p>
         <p class="u-pull-right">Blanco, tinto o espumante</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">el ceviche con su chela | S/17</p>
+        <p class="u-pull-left">el ceviche con su chela | S/15</p>
         <p class="u-pull-right">cebiche vegano y una Pilsen bien fria</p>
       </div>
     </div>
@@ -163,12 +163,6 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">abierta   </p>
-        <p class="u-pull-right"> 
-								<br><br> itamae, chef </p>
-      </div>
-  <!-- -->
-      <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Alan </p>
         <p class="u-pull-right">conceptualizador, arquitecto
 								<br><br>... fui lavaplatos en restaurantes, <br>tome curso en ingles, <br>now I'm a dishwasher!</p>
@@ -178,6 +172,11 @@
         <p class="u-pull-left">Jerenie <br></p>
         <p class="u-pull-right"><br>RR.HH.  
 								<br><br>  </p>
+      </div>  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">abierta   </p>
+        <p class="u-pull-right"> 
+								<br><br> itamae, chef </p>
       </div>
     </div>
 
@@ -191,13 +190,13 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Oswaldo </p>
+        <p class="u-pull-left">Mayyer </p>
         <p class="u-pull-right">  
 								<br><br> cocina </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Jennifer  </p>
+        <p class="u-pull-left">Antoni  </p>
         <p class="u-pull-right">  
 								<br><br> cocina </p>
       </div>
@@ -207,19 +206,19 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Luis  </p>
+        <p class="u-pull-left">Ada  </p>
         <p class="u-pull-right"> 
 								<br><br> cocina </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Irwin </p>
+        <p class="u-pull-left">Jhon </p>
         <p class="u-pull-right">  
 								<br><br> cocina </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Antoni  </p>
+        <p class="u-pull-left">Angel  </p>
         <p class="u-pull-right">  
 								<br><br> cocina </p>
       </div>
