--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <h5>sorprender y deleitar los sentidos</h5>
 
 
-        <p>Presentando sushi vegano por Master Chef Perú Jim Daniel Echevarría. Disfrutado por veganos, vegetarianos, pescetarianos, flexitarianos y carnívoros igual. No encontrarás nada igual.</p>
+        <p>Presentando sushi vegano por MasterChef Perú Jim Daniel Echevarría. Disfrutado por veganos, vegetarianos, pescetarianos, flexitarianos y carnívoros igual. No encontrarás nada igual.</p>
          <p class="u-pull-left" >abierto todos los días<br>&nbsp;&nbsp;&nbsp;12 P.M. a 9 P.M.<br>no reservaciones<br>solo efectivo<br><br>  
-			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">opiniones desde tripadvisor</a>
+			<a target="_blank" class="button" style="margin-right:16px;" href="images/carta-1.jpg">la carta</a>
 		 </p>
       	<p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Perú<br><br><br><br>
 			<a class="button" target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">ubicación en la mapa</a>
@@ -56,7 +56,7 @@
     <div class="row">
       <div class="six columns" style="margin-top: 10%">
         <h5>combos y tablas</h5>
-        <p class="u-pull-right">precios en Soles<br>La carta 100% vegana <a target="_blank" href="images/carta-1.jpg"> esta aqui</a>.</p>
+        <p class="u-pull-right">precios en Soles<br> <a target="_blank" href="images/carta-1.jpg"> la carta completa </a></p>
       </div>
     </div>
 
@@ -103,6 +103,7 @@
     <div class="row">
       <div class="six columns" style="margin-top: 5%">
         <h4>la fama</h4>
+			<a target="_blank" class="button" style="float: right" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">opiniones desde tripadvisor</a>
       </div>
     </div>
 
@@ -151,6 +152,8 @@
       </div>
     </div>
 
+
+
   <!-- Team header row -->
     <div class="row">
       <div class="six columns" style="margin-top: 5%">
@@ -163,7 +166,7 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Alan </p>
+        <p class="u-pull-left">Alan Pater </p>
         <p class="u-pull-right">conceptualizador, arquitecto
 								<br><br>... fui lavaplatos en restaurantes, <br>tome curso en ingles, <br>now I'm a dishwasher!</p>
       </div>
@@ -184,19 +187,19 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Jaime  </p>
+        <p class="u-pull-left">Mayyer  </p>
         <p class="u-pull-right"> 
 								<br><br> cocina </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Mayyer </p>
+        <p class="u-pull-left">Antoni </p>
         <p class="u-pull-right">  
 								<br><br> cocina </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Antoni  </p>
+        <p class="u-pull-left">Irwin  </p>
         <p class="u-pull-right">  
 								<br><br> cocina </p>
       </div>
