--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
         <p>Presentando sushi vegano por MasterChef Perú Jim Daniel Echevarría. Disfrutado por veganos, vegetarianos, pescetarianos, flexitarianos y carnívoros igual. No encontrarás nada igual.</p>
-         <p class="u-pull-left" >abierto todos los días<br>&nbsp;&nbsp;&nbsp;12 P.M. a 9 P.M.<br>no reservaciones<br>solo efectivo<br><br>  
+         <p class="u-pull-left" >abierto todos los días<br>&nbsp;&nbsp;&nbsp;12 m a 10 PM<br>no reservaciones<br>solo efectivo<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="images/carta-1.jpg">la carta</a>
 		 </p>
       	<p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Perú<br><br><br><br>
@@ -177,9 +177,9 @@
 								<br><br>  </p>
       </div>  <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">abierta   </p>
+        <p class="u-pull-left">Jefferson   </p>
         <p class="u-pull-right"> 
-								<br><br> itamae, chef </p>
+								<br><br> jefe de cocina </p>
       </div>
     </div>
 
@@ -187,13 +187,13 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Mayyer  </p>
+        <p class="u-pull-left">Antoni  </p>
         <p class="u-pull-right"> 
 								<br><br> cocina </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Antoni </p>
+        <p class="u-pull-left">Mayyer </p>
         <p class="u-pull-right">  
 								<br><br> cocina </p>
       </div>
