--- a/es/index.html
+++ b/es/index.html
@@ -43,7 +43,7 @@
 
 
         <p>Presentando sushi vegano por Master Chef Perú Jim Daniel Echevarría. Disfrutado por veganos, vegetarianos, pescetarianos, flexitarianos y carnívoros igual. No encontrarás nada igual.</p>
-         <p class="u-pull-left" >abierto todos los días<br>&nbsp;&nbsp;&nbsp;12 P.M. a 9 P.M.<br>no reservaciones<br>solo efectivo<br><br>  
+         <p class="u-pull-left" >abierto todos los días<br>&nbsp;&nbsp;&nbsp;12 m a 10 PM<br>no reservaciones<br>solo efectivo<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">opiniones desde tripadvisor</a>
 		 </p>
       	<p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Perú<br><br><br><br>
